fix: removed hidden overflow from the image container as it was cutting off the box shadow

--- a/app/scss/_carousel.scss
+++ b/app/scss/_carousel.scss
@@ -1,7 +1,6 @@
 .carousel {
   &-img-container {
     background: url("/images/pattern-bg.svg") center center/contain no-repeat;
-    overflow: hidden;
     padding: rem(30px) rem(36px) rem(14px) rem(36px);
     width: 326.25px;
     height: rem(302.25px);
